--- a/index.html
+++ b/index.html
@@ -14,9 +14,6 @@
 		.section--wrap {
 			background: none;
 		}
-		.container {
-			max-width: 1190px;
-		}
 	</style>
 </head>
 <body>
@@ -157,7 +154,7 @@
 				</div>
 			</div>
 			<div class="col-xs-12 grid-row--gutter-none content-block--wide">
-				<div class="col-xs content-block content-block__banner--large grid-row--gutter-none grid-row-xs--middle padding-whole--xxlarge" style="background-image: url(banner-02.jpg)">
+				<div class="col-xs content-block content-block__banner--large grid-row--gutter-none grid-row-lg--middle grid-row-xs--bottom padding-whole--xxlarge" style="background-image: url(banner-02.jpg)">
 					<div class="col-xs">
 						<span class="icon icon-heart circle-outline border-width-1 circle-outline text-size--50 trailer--small inline-block"></span>
 						<p class="text-size--13 leader">Familyoffer</p>
@@ -168,15 +165,15 @@
 			</div>
 			<div class="col-hg-9 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
 				<div class="content-block content-block--large grid-row--gutter-none">
-					<div class="col-hg-6 tabletp-text--center">
+					<div class="col-hg-6 tabletl-text--center">
 						<div class="description">
 							<strong class="text-size--13 tablet-hidden">BUNDLE</strong>
-							<h2 class="text-size--38 tabletp-text-size--16 trailer--small tabletp-trailer--none">Sony Xperia XZ Compact</h2>
+							<h2 class="text-size--38 tabletl-text-size--16 tabletp-text-size--16 trailer--small tabletp-trailer--none">Sony Xperia XZ Compact</h2>
 							<p class="text-size--19 tablet-hidden">Buy the new Sony Xperia phone and get a pair of Sony headphones with you.</p>
 						</div>
 						<div class="price-box">
 							<p class="price-before text-size--13 tablet-hidden">Only</p>
-							<p class="text-size--44 tabletp-text-size--19 text-light color-blue trailer tabletp-trailer--xlarge">XXX<span class="currency-mark">,-</span><span class="text-size--19 tabletp-text-size--11 color-gray">/MD</span></p>
+							<p class="text-size--44 tabletl-text-size--19 text-light color-blue trailer tabletp-trailer--xlarge">XXX<span class="currency-mark">,-</span><span class="text-size--19 tabletp-text-size--11 color-gray">/MD</span></p>
 							<p class="text-size--11 text-legal"><span class="tablet-hidden display--block">Free delivery on all phones</span> Minimum price w. FRI+ XX GB: X.XXX kr.</span></p>
 						</div>
 					</div>
@@ -210,7 +207,7 @@
 				<div class="col-xs content-block content-block__banner paddding-whole--xxlarge grid-row--gutter-none grid-row-xs--bottom padding-whole--xxlarge" style="background-image: url(banner-03.jpg)">
 					<div class="col-xs">
 						<strong class="text-size--13">Familyoffer</strong>
-						<h2 class="text-size--44 tabletp-text-size--28 text--light trailer">Buy broadband for the whole family</h2>
+						<h2 class="text-size--44 tabletp-text-size--28 text--light trailer">Chat with your friends for 99 kr. without worring about data</h2>
 						<span class="button button--action">Broadband subscriptions</span>
 					</div>
 				</div>
