--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 				</div>
 				<div class="col-lg-7 tabletp-text--center">
 					<p class="text-size--13">DISCOVER THE NEW</p>
-					<h2 class="text-size--44 tabletp-text-size--34  mobile-text-size--19 text-light trailer">Beats Solo2 Wireless <br/>On-Ear Headphones</h2>
+					<h2 class="text-size--44 tabletp-text-size--34  mobile-text-size--19 text-light trailer mobile-trailer--none">Beats Solo2 Wireless <br/>On-Ear Headphones</h2>
 					<p class="trailer mobile-hidden">Unplug your Beats Solo2 Wireless headphones, pair with your iPhone, <br/>iPad, and move freely for up to 30 feet of wireless listening.</p>
-					<p class="text-size--13">BEFORE 2.800 KR.</p>
-					<p class="text-size--48 tabletp-text-size--38 text--light color-blue trailer--section">2.499,-</p>
+					<p class="text-size--13 mobile-hidden">BEFORE 2.800 KR.</p>
+					<p class="text-size--48 tabletp-text-size--38 mobile-text-size--24 text-light color-blue trailer--section">2.499,-</p>
 					<p class="text-size--11 color-steel-grey">Free delivery <br/>Order before 16 o’clock and get tomorrow</p>
 				</div>
 			</div>
@@ -53,7 +53,7 @@
 								<li class="red"></li>
 								<li class="green"></li>
 							</ul>
-							<h2 class="text-size--38 tabletl-text-size--16 trailer--small tabletl-trailer--none">Sony Xperia XZ Compact Third line</h2>
+							<h2 class="text-size--38 tabletl-text-size--16 trailer--small tabletl-trailer--none text-light tabletl-text-regular">Sony Xperia XZ Compact <span class="tablet-hidden">Third line</span></h2>
 							<ul class="list list--check tablet-hidden">
 								<li>Fri tale og sms</li>
 								<li>40 GB data</li>
@@ -62,7 +62,7 @@
 						</div>
 						<div class="price-box">
 							<p class="price-before text-size--13 tablet-hidden">Only</p>
-							<p class="text-size--44 tabletl-text-size--19 text-light color-blue trailer tabletp-trailer--xlarge">XXX<span class="currency-mark">,-</span><span class="text-size--19 tabletl-text-size--11 color-gray">/MD</span></p>
+							<p class="text-size--44 tabletl-text-size--19 text-light tabletl-text-regular color-blue trailer tabletl-trailer--xlarge">XXX<span class="currency-mark">,-</span><span class="text-size--19 tabletl-text-size--11 color-gray">/MD</span></p>
 							<p class="text-size--11 text-legal"><span class="tablet-hidden display--block">Free delivery on all phones</span> Minimum price w. FRI+ XX GB: X.XXX kr.</span></p>
 						</div>
 					</div>
@@ -147,18 +147,23 @@
 			<div class="col-md-6 grid-row--gutter-none content-block--wide">
 				<div class="col-xs content-block content-block__banner grid-row--gutter-none grid-row-xs--bottom padding-whole--xxlarge" style="background-image: url(banner-01.jpg)">
 					<div class="col-xs">
-						<strong class="text-size--13">Familyoffer</strong>
-						<h2 class="text-size--44 tabletp-text-size--28 text--light trailer">Buy broadband for the whole family</h2>
+						<strong class="text-size--13">FAMILYOFFER</strong>
+						<h2 class="text-size--44 tabletp-text-size--28 text-light trailer text-light">Buy broadband for the whole family</h2>
 						<span class="button button--action">Broadband subscriptions</span>
 					</div>
 				</div>
 			</div>
 			<div class="col-xs-12 grid-row--gutter-none content-block--wide">
 				<div class="col-xs content-block content-block__banner--large content-block__video-banner grid-row--gutter-none grid-row-lg--middle grid-row-xs--bottom padding-whole--xxlarge" style="background-image: url(banner-02.jpg)">
+					<div class="video-background">
+						<video autoplay loop muted>
+							<source type="video/mp4" src="https://player.vimeo.com/external/184646104.hd.mp4?s=cd2a760df3abfc3a8426df1db736300a31ec29b3&profile_id=174">
+						</video>
+					</div>
 					<div class="col-xs">
 						<span class="icon icon-heart circle-outline border-width-1 circle-outline text-size--50 trailer--small inline-block"></span>
-						<p class="text-size--13 leader">Familyoffer</p>
-						<h2 class="text-size--44 tabletp-text-size--28 text--light trailer">Get your family online by <br/>combining all your subscriptions</h2>
+						<p class="text-size--13 leader">FAMILY SUBSCRIPTIONS</p>
+						<h2 class="text-size--44 tabletp-text-size--28 text-light trailer text-light">Get your family online by <br/>combining all your subscriptions</h2>
 						<span class="button button--action">Broadband subscriptions</span>
 					</div>
 				</div>
@@ -168,12 +173,12 @@
 					<div class="col-hg-6 tabletl-text--center">
 						<div class="description">
 							<strong class="text-size--13 tablet-hidden">BUNDLE</strong>
-							<h2 class="text-size--38 tabletl-text-size--16 trailer--small tabletl-trailer--none">Sony Xperia XZ Compact</h2>
+							<h2 class="text-size--38 tabletl-text-size--16 trailer--small tabletl-trailer--none text-light tabletl-text-regular">Sony Xperia X Compact <span class="tablet-hidden">with headset</span></h2>
 							<p class="text-size--19 tablet-hidden">Buy the new Sony Xperia phone and get a pair of Sony headphones with you.</p>
 						</div>
 						<div class="price-box">
 							<p class="price-before text-size--13 tablet-hidden">Only</p>
-							<p class="text-size--44 tabletl-text-size--19 text-light color-blue trailer tabletl-trailer--xlarge">XXX<span class="currency-mark">,-</span><span class="text-size--19 tabletp-text-size--11 color-gray">/MD</span></p>
+							<p class="text-size--44 tabletl-text-size--19 text-light tabletl-text-regular color-blue trailer tabletl-trailer--xlarge">XXX<span class="currency-mark">,-</span><span class="text-size--19 tabletp-text-size--11 color-gray">/MD</span></p>
 							<p class="text-size--11 text-legal"><span class="tablet-hidden display--block">Free delivery on all phones</span> Minimum price w. FRI+ XX GB: X.XXX kr.</span></p>
 						</div>
 					</div>
@@ -206,15 +211,15 @@
 			<div class="col-hg-9 col-md-6 grid-row--gutter-none content-block--wide">
 				<div class="col-xs content-block content-block__banner paddding-whole--xxlarge grid-row--gutter-none grid-row-xs--bottom padding-whole--xxlarge" style="background-image: url(banner-03.jpg)">
 					<div class="col-xs">
-						<strong class="text-size--13">Familyoffer</strong>
-						<h2 class="text-size--44 tabletp-text-size--28 text--light trailer">Chat with your friends for 99 kr. without worring about data</h2>
+						<strong class="text-size--13">SUBSCRIPTIONS</strong>
+						<h2 class="text-size--44 tabletp-text-size--28 text-light trailer text-light">Chat with your friends for<br class="tablet-hidden" /> 99 kr. without worring <br class="tablet-hidden" />about data</h2>
 						<span class="button button--action">Broadband subscriptions</span>
 					</div>
 				</div>
 			</div>
 			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
 				<div class="content-block content-block--small">
-					<h3 class="text-size--28 trailer">Find tabletp</h3>
+					<h3 class="text-size--28 trailer">Find mobile</h3>
 					<div class="separator trailer"></div> 
 					<ul class="trailer--large">
 						<li class="trailer--small"><a href="#" class="button button--default button--stretch">Apple</a></li>
