--- a/index.html
+++ b/index.html
@@ -17,62 +17,67 @@
 	</style>
 </head>
 <body>
-<div class="section--oncanvas">
-<div class="section--wrap">
 <div id="main" class="container--main">
-	<div class="hero-banner container--wide">
+	<div class="hero-banner container--wide trailer--large">
 		<div class="container mobile-padding-toleft--small mobile-padding-toright--small">
 			<div class="grid-row--gutter-none">
 				<div class="col-lg-5 text--center image-block padding-toleft--large padding-toright--large">
 					<img src="headphones.png" alt="">
 				</div>
 				<div class="col-lg-7 tabletp-text--center">
-					<p class="text-size--13">DISCOVER THE NEW</p>
-					<h2 class="text-size--44 tabletp-text-size--34  mobile-text-size--19 text-light trailer mobile-trailer--none">Beats Solo2 Wireless <br/>On-Ear Headphones</h2>
-					<p class="trailer mobile-hidden">Unplug your Beats Solo2 Wireless headphones, pair with your iPhone, <br/>iPad, and move freely for up to 30 feet of wireless listening.</p>
-					<p class="text-size--13 mobile-hidden">BEFORE 2.800 KR.</p>
-					<p class="text-size--48 tabletp-text-size--38 mobile-text-size--24 text-light color-blue trailer--section">2.499,-</p>
+					<div class="description">
+						<strong class="text-size--13">DISCOVER THE NEW</strong>
+						<h2 class="text-size--44 tabletp-text-size--34  mobile-text-size--19 text-light trailer--small mobile-trailer--none">Beats Solo2 Wireless <br/>On-Ear Headphones</h2>
+						<p class="trailer text-size--16 mobile-hidden">Unplug your Beats Solo2 Wireless headphones, pair with your iPhone, <br/>iPad, and move freely for up to 30 feet of wireless listening.</p>
+						<p class="text-size--13 mobile-hidden">BEFORE 2.800 KR.</p>
+						<p class="text-size--48 tabletp-text-size--38 mobile-text-size--24 text-light color-blue">2.499,-</p>
+					</div>
 					<p class="text-size--11 color-steel-grey">Free delivery <br/>Order before 16 o’clock and get tomorrow</p>
 				</div>
 			</div>
 		</div>
 	</div>
+	<div class="container padding-leader padding-trailer">
+		<h1 class="text-size--38 tabletl-text-size--34 text-light">Our own favorits</h1>
+	</div>
 	<div class="container">
 		<div class="grid-row--gutter-small">
-			<div class="col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
-				<div class="content-block content-block--medium grid-row--gutter-none">
+			<div class="col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall animated">
+				<a href="#" class="content-block content-block--medium grid-row--gutter-none">
 					<div class="col-hg-6 padding-toright tabletp-padding-toright--none image-area">
 						<div class="image-holder">
-							<img src="phone-01.jpg" alt="">
+							<img class="item-image" src="phone-01.jpg" alt="">
+							<img class="sticker" src="splash.png" alt="sticker">
 						</div>
 					</div>
 					<div class="col-hg-6 tabletl-text--center">
 						<div class="description">
-							<ul class="colors desktop-hidden">
+							<ul class="colors desktoplg-hidden">
 								<li class="gray"></li>
 								<li class="red"></li>
 								<li class="green"></li>
 							</ul>
 							<h2 class="text-size--38 tabletl-text-size--16 trailer--small tabletl-trailer--none text-light tabletl-text-regular">Sony Xperia XZ Compact <span class="tablet-hidden">Third line</span></h2>
-							<ul class="list list--check tablet-hidden">
+							<ul class="list list--check tablet-hidden text-size--16">
 								<li>Fri tale og sms</li>
 								<li>40 GB data</li>
 								<li>Roam Away i 36 lande</li>
 							</ul>
 						</div>
 						<div class="price-box">
-							<p class="price-before text-size--13 tablet-hidden">Only</p>
-							<p class="text-size--44 tabletl-text-size--19 text-light tabletl-text-regular color-blue trailer tabletl-trailer--xlarge">XXX<span class="currency-mark">,-</span><span class="text-size--19 tabletl-text-size--11 color-gray">/MD</span></p>
+							<p class="price-before text-size--13 tablet-hidden text-regular">Only</p>
+							<p class="text-size--44 tabletl-text-size--19 text-light tabletl-text-regular color-blue trailer tabletl-trailer--xlarge">XXX<span class="text-size--19 tabletl-text-size--11 color-gray text-regular toleft--xsmall">KR./MD.</span></p>
 							<p class="text-size--11 text-legal"><span class="tablet-hidden display--block">Free delivery on all phones</span> Minimum price w. FRI+ XX GB: X.XXX kr.</span></p>
 						</div>
 					</div>
-				</div>
+				</a>
 			</div>
-			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
-				<div class="content-block content-block--small">
+			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall animated">
+				<a href="#" class="content-block content-block--small">
 					<div class="image-area trailer--med">
 						<div class="image-holder">
-							<img src="phone-01.jpg" alt="">
+							<img class="item-image" src="phone-01.jpg" alt="">
+							<img class="sticker" src="splash.png" alt="sticker">
 						</div>
 					</div>
 					<ul class="colors">
@@ -80,18 +85,21 @@
 						<li class="red"></li>
 						<li class="green"></li>
 					</ul>
-					<h3 class="text-size--16">Sony Xperia XZ Compact</h3>
-					<div class="price-box">
-						<p class="text-size--19 color-blue trailer--xlarge">XXX<span class="currency-mark">,-</span><span class="text-size--11 color-gray">/MD</span></p>
-						<p class="text-size--11 text-legal">Minimum price w. FRI+ XX GB: X.XXX kr.</span></p>
+					<div class="description">
+						<h3 class="text-size--16">Sony Xperia XZ Compact</h3>
+						<div class="price-box">
+							<p class="text-size--19 color-blue">XXX<span class="text-size--11 color-gray toleft--xsmall">KR./MD.</span></p>
+						</div>
 					</div>
-				</div>
+					<p class="text-size--11 text-legal">Minimum price w. FRI+ XX GB: X.XXX kr.</span></p>
+				</a>
 			</div>
-			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
-				<div class="content-block content-block--small">
+			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall animated">
+				<a href="#" class="content-block content-block--small">
 					<div class="image-area trailer--med">
 						<div class="image-holder">
-							<img src="phone-01.jpg" alt="">
+							<img class="item-image" src="phone-01.jpg" alt="">
+							<img class="sticker" src="splash.png" alt="sticker">
 						</div>
 					</div>
 					<ul class="colors">
@@ -99,18 +107,21 @@
 						<li class="red"></li>
 						<li class="green"></li>
 					</ul>
-					<h3 class="text-size--16">Sony Xperia XZ Compact</h3>
-					<div class="price-box">
-						<p class="text-size--19 color-blue trailer--xlarge">XXX<span class="currency-mark">,-</span><span class="text-size--11 color-gray">/MD</span></p>
-						<p class="text-size--11 text-legal">Minimum price w. FRI+ XX GB: X.XXX kr.</span></p>
+					<div class="description">
+						<h3 class="text-size--16">Sony Xperia XZ Compact</h3>
+						<div class="price-box">
+							<p class="text-size--19 color-blue">XXX<span class="text-size--11 color-gray toleft--xsmall">KR./MD.</span></p>
+						</div>
 					</div>
-				</div>
+					<p class="text-size--11 text-legal">Minimum price w. FRI+ XX GB: X.XXX kr.</span></p>
+				</a>
 			</div>
-			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
-				<div class="content-block content-block--small">
+			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall animated">
+				<a href="#" class="content-block content-block--small">
 					<div class="image-area trailer--med">
 						<div class="image-holder">
-							<img src="phone-01.jpg" alt="">
+							<img class="item-image" src="phone-01.jpg" alt="">
+							<img class="sticker" src="splash.png" alt="sticker">
 						</div>
 					</div>
 					<ul class="colors">
@@ -118,18 +129,21 @@
 						<li class="red"></li>
 						<li class="green"></li>
 					</ul>
-					<h3 class="text-size--16">Sony Xperia XZ Compact</h3>
-					<div class="price-box">
-						<p class="text-size--19 color-blue trailer--xlarge">XXX<span class="currency-mark">,-</span><span class="text-size--11 color-gray">/MD</span></p>
-						<p class="text-size--11 text-legal">Minimum price w. FRI+ XX GB: X.XXX kr.</span></p>
+					<div class="description">
+						<h3 class="text-size--16">Sony Xperia XZ Compact</h3>
+						<div class="price-box">
+							<p class="text-size--19 color-blue">XXX<span class="text-size--11 color-gray toleft--xsmall">KR./MD.</span></p>
+						</div>
 					</div>
-				</div>
+					<p class="text-size--11 text-legal">Minimum price w. FRI+ XX GB: X.XXX kr.</span></p>
+				</a>
 			</div>
-			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
-				<div class="content-block content-block--small">
+			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall animated">
+				<a href="#" class="content-block content-block--small">
 					<div class="image-area trailer--med">
 						<div class="image-holder">
-							<img src="phone-01.jpg" alt="">
+							<img class="item-image" src="phone-01.jpg" alt="">
+							<img class="sticker" src="splash.png" alt="sticker">
 						</div>
 					</div>
 					<ul class="colors">
@@ -137,24 +151,27 @@
 						<li class="red"></li>
 						<li class="green"></li>
 					</ul>
-					<h3 class="text-size--16">Sony Xperia XZ Compact</h3>
-					<div class="price-box">
-						<p class="text-size--19 color-blue trailer--xlarge">XXX<span class="currency-mark">,-</span><span class="text-size--11 color-gray">/MD</span></p>
-						<p class="text-size--11 text-legal">Minimum price w. FRI+ XX GB: X.XXX kr.</span></p>
+					<div class="description">
+						<h3 class="text-size--16">Sony Xperia XZ Compact</h3>
+						<div class="price-box">
+							<p class="text-size--19 color-blue">XXX<span class="text-size--11 color-gray toleft--xsmall">KR./MD.</span></p>
+						</div>
 					</div>
-				</div>
+					<p class="text-size--11 text-legal">Minimum price w. FRI+ XX GB: X.XXX kr.</span></p>
+				</a>
 			</div>
-			<div class="col-md-6 grid-row--gutter-none content-block--wide">
-				<div class="col-xs content-block content-block__banner grid-row--gutter-none grid-row-xs--bottom padding-whole--xxlarge" style="background-image: url(banner-01.jpg)">
+			<div class="col-md-6 grid-row--gutter-none content-block--wide animated">
+				<a href="#" class="col-xs content-block content-block__banner grid-row--gutter-none grid-row-xs--bottom padding-whole--xxlarge padding-trailer--large mobile-padding-toleft mobile-padding-toright" style="background-image: url(banner-01.jpg);">
 					<div class="col-xs">
 						<strong class="text-size--13">FAMILYOFFER</strong>
 						<h2 class="text-size--44 tabletp-text-size--28 text-light trailer text-light">Buy broadband for the whole family</h2>
-						<span class="button button--action">Broadband subscriptions</span>
+						<span class="button button--action trailer--large">Broadband subscriptions</span>
+						<p class="text-size--11 color-white">Minimum price w. FRI+ XX GB: X.XXX kr.</span></p>
 					</div>
-				</div>
+				</a>
 			</div>
-			<div class="col-xs-12 grid-row--gutter-none content-block--wide">
-				<div class="col-xs content-block content-block__banner--large content-block__video-banner grid-row--gutter-none grid-row-lg--middle grid-row-xs--bottom padding-whole--xxlarge" style="background-image: url(banner-02.jpg)">
+			<div class="col-xs-12 grid-row--gutter-none content-block--wide animated">
+				<a href="#" class="col-xs content-block content-block__banner--large content-block__video-banner grid-row--gutter-none grid-row-lg--middle grid-row-xs--bottom padding-whole--xxlarge mobile-padding-toleft mobile-padding-toright" style="background-image: url(banner-02.jpg)">
 					<div class="video-background">
 						<video autoplay loop muted>
 							<source type="video/mp4" src="https://player.vimeo.com/external/184646104.hd.mp4?s=cd2a760df3abfc3a8426df1db736300a31ec29b3&profile_id=174">
@@ -162,38 +179,40 @@
 					</div>
 					<div class="col-xs">
 						<span class="icon icon-heart circle-outline border-width-1 circle-outline text-size--50 trailer--small inline-block"></span>
-						<p class="text-size--13 leader">FAMILY SUBSCRIPTIONS</p>
-						<h2 class="text-size--44 tabletp-text-size--28 text-light trailer text-light">Get your family online by <br/>combining all your subscriptions</h2>
-						<span class="button button--action">Broadband subscriptions</span>
+						<p class="text-size--13 leader text-bold">FAMILY SUBSCRIPTIONS</p>
+						<h2 class="text-size--44 tabletp-text-size--28 text-light trailer text-light">Get your family online by combining all your subscriptions</h2>
+						<span class="button button--action trailer--large">Broadband subscriptions</span>
 					</div>
-				</div>
+					<p class="text-size--11 color-white banner-legal">Minimum price w. FRI+ XX GB: X.XXX kr.</span></p>
+				</a>
 			</div>
-			<div class="col-hg-9 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
-				<div class="content-block content-block--large grid-row--gutter-none">
-					<div class="col-hg-6 tabletl-text--center">
+			<div class="col-hg-9 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall animated">
+				<a href="#" class="content-block content-block--large grid-row--gutter-none">
+					<div class="col-hg-5 tabletl-text--center">
 						<div class="description">
 							<strong class="text-size--13 tablet-hidden">BUNDLE</strong>
 							<h2 class="text-size--38 tabletl-text-size--16 trailer--small tabletl-trailer--none text-light tabletl-text-regular">Sony Xperia X Compact <span class="tablet-hidden">with headset</span></h2>
 							<p class="text-size--19 tablet-hidden">Buy the new Sony Xperia phone and get a pair of Sony headphones with you.</p>
 						</div>
 						<div class="price-box">
-							<p class="price-before text-size--13 tablet-hidden">Only</p>
-							<p class="text-size--44 tabletl-text-size--19 text-light tabletl-text-regular color-blue trailer tabletl-trailer--xlarge">XXX<span class="currency-mark">,-</span><span class="text-size--19 tabletp-text-size--11 color-gray">/MD</span></p>
+							<p class="price-before text-size--13 tablet-hidden text-regular">Only</p>
+							<p class="text-size--44 tabletl-text-size--19 text-light tabletl-text-regular color-blue trailer tabletl-trailer--xlarge">XXX<span class="text-size--19 tabletp-text-size--11 color-gray text-regular toleft--xsmall">KR./MD.</span></p>
 							<p class="text-size--11 text-legal"><span class="tablet-hidden display--block">Free delivery on all phones</span> Minimum price w. FRI+ XX GB: X.XXX kr.</span></p>
 						</div>
 					</div>
-					<div class="col-hg-6 padding-toright tabletp-padding-toright--none image-area mobile-order--first">
+					<div class="col-hg-7 image-area mobile-order--first">
 						<div class="image-holder">
-							<img src="phone-01.jpg" alt="">
+							<img src="image-size.jpg" alt="">
 						</div>
 					</div>
-				</div>
+				</a>
 			</div>
-			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
-				<div class="content-block content-block--small">
+			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall animated">
+				<a href="#" class="content-block content-block--small">
 					<div class="image-area trailer--med">
 						<div class="image-holder">
-							<img src="phone-01.jpg" alt="">
+							<img class="item-image" src="phone-01.jpg" alt="">
+							<img class="sticker" src="splash.png" alt="sticker">
 						</div>
 					</div>
 					<ul class="colors">
@@ -201,23 +220,26 @@
 						<li class="red"></li>
 						<li class="green"></li>
 					</ul>
-					<h3 class="text-size--16">Sony Xperia XZ Compact</h3>
-					<div class="price-box">
-						<p class="text-size--19 color-blue trailer--xlarge">XXX<span class="currency-mark">,-</span><span class="text-size--11 color-gray">/MD</span></p>
-						<p class="text-size--11 text-legal">Minimum price w. FRI+ XX GB: X.XXX kr.</span></p>
+					<div class="description">
+						<h3 class="text-size--16">Sony Xperia XZ Compact</h3>
+						<div class="price-box">
+							<p class="text-size--19 color-blue">XXX<span class="text-size--11 color-gray toleft--xsmall">KR./MD.</span></p>
+						</div>
 					</div>
-				</div>
+					<p class="text-size--11 text-legal">Minimum price w. FRI+ XX GB: X.XXX kr.</span></p>
+				</a>
 			</div>
-			<div class="col-hg-9 col-md-6 grid-row--gutter-none content-block--wide">
-				<div class="col-xs content-block content-block__banner paddding-whole--xxlarge grid-row--gutter-none grid-row-xs--bottom padding-whole--xxlarge" style="background-image: url(banner-03.jpg)">
+			<div class="col-hg-9 col-md-6 grid-row--gutter-none content-block--wide animated">
+				<a href="#" class="col-xs content-block content-block__banner paddding-whole--xxlarge grid-row--gutter-none grid-row-xs--bottom padding-whole--xxlarge padding-trailer--large mobile-padding-toleft mobile-padding-toright" style="background-image: url(banner-03.jpg)">
 					<div class="col-xs">
 						<strong class="text-size--13">SUBSCRIPTIONS</strong>
 						<h2 class="text-size--44 tabletp-text-size--28 text-light trailer text-light">Chat with your friends for<br class="tablet-hidden" /> 99 kr. without worring <br class="tablet-hidden" />about data</h2>
-						<span class="button button--action">Broadband subscriptions</span>
+						<span class="button button--action trailer--large">Broadband subscriptions</span>
+						<p class="text-size--11 color-white">Minimum price w. FRI+ XX GB: X.XXX kr.</span></p>
 					</div>
-				</div>
+				</a>
 			</div>
-			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
+			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall animated">
 				<div class="content-block content-block--small">
 					<h3 class="text-size--28 trailer">Find mobile</h3>
 					<div class="separator trailer"></div> 
@@ -234,7 +256,28 @@
 		</div>
 	</div>
 </div>
-</div>
-</div>
+<script>
+	document.addEventListener("DOMContentLoaded", function(event) { 
+		var animatedBlock = document.querySelectorAll(".animated");
+
+		animatedBlock.forEach(function(elem){
+			if (isVisible(elem)) {
+				elem.classList.add("block-visible");
+			};
+		});
+
+		document.addEventListener("scroll", function(){
+			animatedBlock.forEach(function(elem){
+				if (isVisible(elem)) {
+					elem.classList.add("block-visible");
+				};
+			});
+		})
+
+		function isVisible(el){
+			return el.getBoundingClientRect().top - window.innerHeight <= 0;
+		}
+	});
+ </script>
 </body>
 </html>
