--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<title>Document</title>
-	<!-- <link rel="stylesheet" type="text/css" href="https://www.telenor.dk/client/s/app/css/main.css"> -->
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<style type="text/css">
 		body {
@@ -42,7 +41,7 @@
 	</div>
 	<div class="container">
 		<div class="grid-row--gutter-small">
-			<div class="col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall animated">
+			<div class="col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
 				<a href="#" class="content-block content-block--medium grid-row--gutter-none">
 					<div class="col-hg-6 padding-toright tabletp-padding-toright--none image-area">
 						<div class="image-holder">
@@ -72,7 +71,7 @@
 					</div>
 				</a>
 			</div>
-			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall animated">
+			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
 				<a href="#" class="content-block content-block--small">
 					<div class="image-area trailer--med">
 						<div class="image-holder">
@@ -94,7 +93,7 @@
 					<p class="text-size--11 text-legal">Minimum price w. FRI+ XX GB: X.XXX kr.</span></p>
 				</a>
 			</div>
-			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall animated">
+			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
 				<a href="#" class="content-block content-block--small">
 					<div class="image-area trailer--med">
 						<div class="image-holder">
@@ -116,7 +115,7 @@
 					<p class="text-size--11 text-legal">Minimum price w. FRI+ XX GB: X.XXX kr.</span></p>
 				</a>
 			</div>
-			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall animated">
+			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
 				<a href="#" class="content-block content-block--small">
 					<div class="image-area trailer--med">
 						<div class="image-holder">
@@ -138,7 +137,7 @@
 					<p class="text-size--11 text-legal">Minimum price w. FRI+ XX GB: X.XXX kr.</span></p>
 				</a>
 			</div>
-			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall animated">
+			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
 				<a href="#" class="content-block content-block--small">
 					<div class="image-area trailer--med">
 						<div class="image-holder">
@@ -160,7 +159,7 @@
 					<p class="text-size--11 text-legal">Minimum price w. FRI+ XX GB: X.XXX kr.</span></p>
 				</a>
 			</div>
-			<div class="col-md-6 grid-row--gutter-none content-block--wide animated">
+			<div class="col-md-6 grid-row--gutter-none content-block--wide">
 				<a href="#" class="col-xs content-block content-block__banner grid-row--gutter-none grid-row-xs--bottom padding-whole--xxlarge padding-trailer--large mobile-padding-toleft mobile-padding-toright" style="background-image: url(banner-01.jpg);">
 					<div class="col-xs">
 						<strong class="text-size--13">FAMILYOFFER</strong>
@@ -170,7 +169,7 @@
 					</div>
 				</a>
 			</div>
-			<div class="col-xs-12 grid-row--gutter-none content-block--wide animated">
+			<div class="col-xs-12 grid-row--gutter-none content-block--wide">
 				<a href="#" class="col-xs content-block content-block__banner--large content-block__video-banner grid-row--gutter-none grid-row-lg--middle grid-row-xs--bottom padding-whole--xxlarge mobile-padding-toleft mobile-padding-toright" style="background-image: url(banner-02.jpg)">
 					<div class="video-background">
 						<video autoplay loop muted>
@@ -186,7 +185,7 @@
 					<p class="text-size--11 color-white banner-legal">Minimum price w. FRI+ XX GB: X.XXX kr.</span></p>
 				</a>
 			</div>
-			<div class="col-hg-9 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall animated">
+			<div class="col-hg-9 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
 				<a href="#" class="content-block content-block--large grid-row--gutter-none">
 					<div class="col-hg-5 tabletl-text--center">
 						<div class="description">
@@ -207,7 +206,7 @@
 					</div>
 				</a>
 			</div>
-			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall animated">
+			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
 				<a href="#" class="content-block content-block--small">
 					<div class="image-area trailer--med">
 						<div class="image-holder">
@@ -229,7 +228,7 @@
 					<p class="text-size--11 text-legal">Minimum price w. FRI+ XX GB: X.XXX kr.</span></p>
 				</a>
 			</div>
-			<div class="col-hg-9 col-md-6 grid-row--gutter-none content-block--wide animated">
+			<div class="col-hg-9 col-md-6 grid-row--gutter-none content-block--wide">
 				<a href="#" class="col-xs content-block content-block__banner paddding-whole--xxlarge grid-row--gutter-none grid-row-xs--bottom padding-whole--xxlarge padding-trailer--large mobile-padding-toleft mobile-padding-toright" style="background-image: url(banner-03.jpg)">
 					<div class="col-xs">
 						<strong class="text-size--13">SUBSCRIPTIONS</strong>
@@ -239,7 +238,7 @@
 					</div>
 				</a>
 			</div>
-			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall animated">
+			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
 				<div class="content-block content-block--small">
 					<h3 class="text-size--28 trailer">Find mobile</h3>
 					<div class="separator trailer"></div> 
@@ -256,22 +255,5 @@
 		</div>
 	</div>
 </div>
-<script>
-	document.addEventListener("DOMContentLoaded", function(event) { 
-		var animatedBlock = document.querySelectorAll(".animated");
-
-		animatedBlock.forEach(addClassIfVisible);
-
-		window.addEventListener("scroll", function(){
-			animatedBlock.forEach(addClassIfVisible)
-		});
-
-		function addClassIfVisible(el){
-			if(el.getBoundingClientRect().top - window.innerHeight <= 0) {
-				el.classList.add("block-visible");
-			}
-		}
-	});
- </script>
 </body>
 </html>
