--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <style>
 	
-	.carousel--init .carousel--item {
+	.carousel--init .carousel__item {
 		visibility: visible !important;
 	}
 </style>
